Criação de crud

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,17 +11,22 @@
     <h2>Cadatro de Empresas</h2>
 </div>
 <div class="col-8 m-auto pt-2 pb-2">
-    <a href="" class="btn btn-primary">Adicionar Loja</a>
+    <a href="/form" class="btn btn-primary">Adicionar Loja</a>
 </div>
 <div class="col-8 m-auto pt-2 pb-2">
 <table class="table">
   <thead class="table-dark">
   <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
+      <th scope="col">ID</th>
+      <th scope="col">RAZÃO SOCIAL</th>
+      <th scope="col">NOME FANTASIA</th>
+      <th scope="col">RESPONSÁVEL</th>
+      <th scope="col">VENDEDOR</th>
+      <th scope="col">AUTOMAÇÃO</th>
+      <th scope="col">ANALISTA</th>
+      <th scope="col">DATA ATIVAÇÃO</th>
+      <th scope="col">STATUS</th>
+  </tr>
   </thead>
   <tbody>
    <tr>
