Criação de crud

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,6 +18,7 @@
   <thead class="table-dark">
   <tr>
       <th scope="col">ID</th>
+      <th scope="col">CNPJ</th>
       <th scope="col">RAZÃO SOCIAL</th>
       <th scope="col">NOME FANTASIA</th>
       <th scope="col">RESPONSÁVEL</th>
