Criação de crud

--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -11,11 +11,29 @@
     <h2>Inserir Empresas</h2>
 </div>
 <div class="col-8 m-auto pt-2 pb-2">
-    <a href="" class="btn btn-primary">Voltar</a>
+    <a href="/" class="btn btn-primary">Voltar</a>
 </div>
-<div class="col-8 m-auto pt-2 pb-2">
-{{form}}
+<div class="col-8 m-auto pt-4 pb-2">
+<!--{{form.as_p}}-->
+    <form name="form" id="form" method="post">
+        {% csrf_token %}
+        <div class="form-group mt-4">RAZAO SOCIAL:{{form.RAZAO_SOCIAL}}</div>
+        <div class="form-group mt-4">CNPJ:{{form.CNPJ}}</div>
+        <div class="form-group mt-4">NOME FANTASIA:{{form.NOME_FANTASIA}}</div>
+        <div class="form-group mt-4">RESPONSAVEL:{{form.RESPONSAVEL}}</div>
+        <div class="form-group mt-4">VENDEDOR:{{form.VENDEDOR}}</div>
+        <div class="form-group mt-4">AUTOMACAO:{{form.AUTOMACAO}}</div>
+        <div class="form-group mt-4">ANALISTA{{form.ANALISTA}}</div>
+        <div class="form-group mt-4">DATA_ATIVACAO:{{form.DATA_ATIVACAO}}</div>
+        <div class="form-group mt-4">STATUS:{{form.STATUS}}</div>
+         <div ></div>
+        <input type="submit" class="btn btn-success" value="Salvar">
+
+    </form>
 </div>
 
+
+
+</div>
 </body>
 </html>
